[package]
name = "rust_learning"
version = "0.1.0"
authors = ["longnie"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.114", features=["derive"]}
serde_json = "1.0.55"
mysql = "18.2.0"
actix-web = "2.0.0"
actix-rt = "1.1.1"